--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
             const companyLogos = [
                 {
                     name: "ADS Group",
-                    src: "https://images.unsplash.com/photo-1599305445671-ac291c95aaa9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxhZHMlMjBncm91cHxlbnwxfHx8fDE3NTcyNTI2ODN8MA&ixlib=rb-4.1.0&q=80&w=200&utm_source=figma&utm_medium=referral",
+                    src: "images/ads.png",
                     alt: "ADS Group - UK aerospace, defence, security and space trade organisation",
                     url: "http://adsgroup.org.uk/"
                 },
