--- a/index.html
+++ b/index.html
@@ -669,19 +669,19 @@
                 },
                 {
                     name: "CSeeker", 
-                    src: "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxic2wlMjBzZXJ2aWNlc3xlbnwxfHx8fDE3NTcyNTI2ODN8MA&ixlib=rb-4.1.0&q=80&w=200&utm_source=figma&utm_medium=referral",
+                    src: "images/cseeker.png",
                     alt: "CSeeker - British Sign Language leading agency in the UK",
                     url: "https://cseeker.co.uk/"
                 },
                 {
                     name: "Farnborough International",
-                    src: "https://images.unsplash.com/photo-1540962351504-03099e0a754b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxhdmlhdGlvbiUyMGV4aGliaXRpb258ZW58MXx8fHwxNzU3MjUyNjgzfDA&ixlib=rb-4.1.0&q=80&w=200&utm_source=figma&utm_medium=referral",
+                    src: "images/farnborough.png",
                     alt: "Farnborough International Exhibition & Conference Centre",
                     url: "https://www.farnborough.com/"
                 },
                 {
                     name: "The British Motor Show",
-                    src: "https://images.unsplash.com/photo-1449824913935-59a10b8d2000?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3Nzg4Nzd8MHwxfHNlYXJjaHwxfHxtb3RvciUyMHNob3d8ZW58MXx8fHwxNzU3MjUyNjgzfDA&ixlib=rb-4.1.0&q=80&w=200&utm_source=figma&utm_medium=referral",
+                    src: "images/britishmotor.png",
                     alt: "The British Motor Show 2025 - Major UK automotive event",
                     url: "https://thebritishmotorshow.live/"
                 }
